# librfl

./: .clang-format  .gitmodules  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  project_info.cmake
example/: CMakeLists.txt  any_var.h  call_desc.h  enum_class.h  example_export.h  main.cc  object.cc  object.h  package.h  package_manifest.cc  package_manifest.h  property.cc  property.h  test_annotations.cc  test_annotations.h  test_dependecies.cc  test_dependecies.h  test_generator.cc  test_generator.h  test_object.h  test_primitives.h  type_class.h  type_info.h  type_repository.cc  type_repository.h
example/generator/example/: __init__.py
example/generator/example/templates/: package_export.tmpl  package_file_header.tmpl  package_file_source.tmpl  package_header.tmpl  package_source.tmpl
rfl/: CMakeLists.txt  annotations.h  any_var.h  dictionary.cc  dictionary.h  dictionary_unittest.cc  generator.cc  generator.h  generator_util.h  native_library.cc  native_library.h  reflected.cc  reflected.h  reflected_io.cc  reflected_io.h  reflected_unittest.cc  repository.cc  repository.h  rfl_export.h  type_info.h  types.h
rfl-gen/: CMakeLists.txt  rfl-dump  rfl-dump.py  rfl-gen  rfl-gen.py
rfl-gen/html/: __init__.py
rfl-gen/html/templates/: html_tree.html
rfl-gen/rfl/: __init__.py  generator.py
rfl-gen/rfl/proto/: __init__.py
rfl-gen/templates/: cxx_utils.tmpl
rfl-scan/: CMakeLists.txt  annotation_parser.cc  annotation_parser.h  ast_scan.cc  ast_scan.h  compilation_db.cc  compilation_db.h  main.cc  proto_ast_scan.cc  proto_ast_scan.h
rfl-scan/test/: test_annotations.cc  test_annotations.h  test_generator.cc
rfl/proto/: reflected.proto
rfl/test/: CMakeLists.txt  basic_generator.cc  testpkg.cc
share/: FindLibRFL.cmake  RFLMacros.cmake  UseRFL.cmake  rfl_rule.gni  rfl_tool.py
umake/: UMakeInit.cmake  UMakeMacros.cmake  UMakePackaging.cmake  UMakePlatformDetect.cmake  UMakeVersion.cmake
umake/find_modules/: FindClang.cmake  FindGLIB.cmake  FindGTK3.cmake  FindLLVM.cmake  FindOpenGLES.cmake
umake/resources/: application-noglow.icns  application.icns  version.cc.in  version.h.in
umake/templates/: dummy.cmake
umake/toolchains/: darwin-clang.cmake  linux-clang.cmake  rpi-gcc.cmake
